--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -773,7 +773,8 @@
                 </div>
                 <h3 class="h5 card-title"><a href="#">Simplified Self-Hosting</a></h3>
                 <p class="card-text">
-                  Be up-and-running in no time. As soon as you have purchased your licence of Retrospected Self-Hosted, an email will be sent to you with detailed and easy-to-follow instructions on how to host Retrospected on your servers.
+                  Be up-and-running in no time. As soon as you have purchased a licence for Retrospected Self-Hosted,
+                  an email will be sent to you with detailed and easy-to-follow instructions on how to host Retrospected on your servers.
                 </p>
               </div>
             </div>
