--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -908,7 +908,8 @@
               <p>
                 Retrospected Ltd.<br />
                 Registered in England and Wales 13624961. <br />
-                17 Jedburgh Street, London, SW11 5QA<br />
+                17 Jedburgh Street<br />
+                London, SW11 5QA<br />
                 For support, email <a href="mailto:support@retrospected.com">support@retrospected.com</a>.
               </p>
 
