--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,7 +12,7 @@
   <meta name="HandheldFriendly" content="true">
   <meta name="description" content="Free Real-time Agile Retrospective Board for engineering teams" />
   <meta http-equiv="cleartype" content="on">
-  <meta name="theme-color" content="#673ab7">
+  <meta name="theme-color" content="#d1c4e9">
 
 
   <meta property="og:site_name" content="Retrospected" />
