--- a/frontend/public/index.empty.html
+++ b/frontend/public/index.empty.html
@@ -48,7 +48,7 @@
   <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-TileColor" content="#6C41E1">
   <meta name="msapplication-TileImage" content="%PUBLIC_URL%/ms-icon-144x144.png">
   
   <meta name="theme-color" content="#ffffff" />
