Giphy and versions

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,7 +28,6 @@
       GIPHY_API_KEY: 'NO_GIPHY',
       STRIPE_KEY: 'NO_STRIPE',
       DEFAULT_LANGUAGE: 'NO_DEFAULT_LANGUAGE',
-      VERSION: '%REACT_APP_VERSION%',
     };
   </script>
 
@@ -51,7 +50,7 @@
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 
   <meta name="theme-color" content="#ffffff">
-  <meta name="version" content="%REACT_APP_VERSION%" />
+  <meta name="version" content="%VITE_VERSION%" />
   <meta name="env" content="%NODE_ENV%" />
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -100,7 +99,7 @@
 </head>
 
 <body ontouchstart="">
-  <!-- Version: %REACT_APP_VERSION% - %NODE_ENV% -->
+  <!-- Version: %VITE_VERSION% - %NODE_ENV% -->
 
   <div id="content">
     <div style="
