--- a/frontend/public/index.empty.html
+++ b/frontend/public/index.empty.html
@@ -25,7 +25,7 @@
       GIPHY_API_KEY: 'NO_GIPHY',
       STRIPE_KEY: 'NO_STRIPE',
       DEFAULT_LANGUAGE: 'NO_DEFAULT_LANGUAGE',
-      VERSION: '%REACT_APP_VERSION%',
+      VERSION: '%VITE_VERSION%',
     };
   </script>
 
@@ -52,7 +52,7 @@
   <meta name="msapplication-TileImage" content="%PUBLIC_URL%/ms-icon-144x144.png">
   
   <meta name="theme-color" content="#ffffff" />
-  <meta name="version" content="%REACT_APP_VERSION%" />
+  <meta name="version" content="%VITE_VERSION%" />
   <meta name="env" content="%NODE_ENV%" />
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
@@ -60,7 +60,7 @@
 </head>
 
 <body ontouchstart="">
-  <!-- Version: %REACT_APP_VERSION% - %NODE_ENV% -->
+  <!-- Version: %VITE_VERSION% - %NODE_ENV% -->
 
   <div id="content" />
 </body>
