Trying to fix integration tests

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -947,6 +947,7 @@
   <script src="/marketing/js/jquery.magnific-popup.min.js" class="marketing"></script>
   <script src="/marketing/js/owl.carousel.min.js" class="marketing"></script>
   <script src="/marketing/js/scripts.js" class="marketing"></script>
+  <script type="module" src="/src/node.ts"></script>
   <script type="module" src="/src/index.tsx"></script>
 </body>
 
