--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,8 +50,8 @@
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 
   <meta name="theme-color" content="#ffffff">
-  <meta name="version" content="%VITE_VERSION%" />
-  <meta name="env" content="%NODE_ENV%" />
+  <meta name="version" content="<%= APP_VERSION  %>" />
+  <meta name="env" content="<%= APP_ENV  %>" />
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
@@ -99,7 +99,7 @@
 </head>
 
 <body ontouchstart="">
-  <!-- Version: %VITE_VERSION% - %NODE_ENV% -->
+  <!-- Version: <%= APP_VERSION  %> - <%= APP_ENV  %> -->
 
   <div id="content">
     <div style="
