--- a/frontend/index.html
+++ b/frontend/index.html
@@ -91,40 +91,41 @@
 <body ontouchstart="">
   <!-- Version: <%= APP_VERSION  %> - <%= APP_ENV  %> -->
 
-  <div id="content" />
-  <style>
-    .loader {
-      font-size: 5rem;
-      font-weight: bold;
-    }
-    @keyframes blink {
-      50% { color: transparent }
-    }
-    .loader__dot { animation: 1s blink infinite }
-    .loader__dot:nth-child(2) { animation-delay: 250ms }
-    .loader__dot:nth-child(3) { animation-delay: 500ms }
-  </style>
-
-  <div style="
-          background-color: #673ab7;
-          height: 100%;
-          width: 100%;
-          position: fixed;
-          top: 0;
-          left: 0;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          color: white;
-          font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
-        ">
+  <div id="content">
+    <style>
+      .loader {
+        font-size: 5rem;
+        font-weight: bold;
+      }
+      @keyframes blink {
+        50% { color: transparent }
+      }
+      .loader__dot { animation: 1s blink infinite }
+      .loader__dot:nth-child(2) { animation-delay: 250ms }
+      .loader__dot:nth-child(3) { animation-delay: 500ms }
+    </style>
+  
+    <div style="
+        background-color: #673ab7;
+        height: 100%;
+        width: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+      ">
       <div class="loader">R
         <span class="loader__dot">.</span>
         <span class="loader__dot">.</span>
         <span class="loader__dot">.</span>
       </div>
     </div>
-
+  </div>
+  
   <script type="module" src="/src/node.ts"></script>
   <script type="module" src="/src/index.tsx"></script>
 </body>
